--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-project",
+  "name": "myfakeshopping",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -18,8 +18,11 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build", 
+    "deploy": "gh-pages -d build" 
   },
+  "homepage": "https://RedPromotion.github.io/MyFakeShopping",  
   "eslintConfig": {
     "extends": [
       "react-app",
