--- a/package.json
+++ b/package.json
@@ -1,28 +1,25 @@
 {
-  "name": "myfakeshopping",
+  "name": "react-project",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.0",
-    "@mui/material": "^6.4.1",
-    "@mui/x-data-grid": "^7.24.0",
-    "cra-template": "1.2.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-router-dom": "^7.1.3",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^4.2.4"
+"@emotion/react": "^11.14.0",
+  "@emotion/styled": "^11.14.0",
+  "@mui/material": "^6.4.1",
+  "@mui/x-data-grid": "^7.24.0",
+  "cra-template": "1.2.0",
+  "react": "^18.2.0",  
+  "react-dom": "^18.2.0",  
+  "react-router-dom": "^7.1.3",
+  "react-scripts": "5.0.1",
+  "web-vitals": "^4.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build", 
-    "deploy": "gh-pages -d build" 
+    "eject": "react-scripts eject"
   },
-  "homepage": "https://RedPromotion.github.io/MyFakeShopping",  
   "eslintConfig": {
     "extends": [
       "react-app",
